--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lottie-react": "^2.4.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18",
